# SearchDeadCode

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TESTING.md  action.yml
benches/: parsing_bench.rs
src/: lib.rs  main.rs
src/analysis/: cycles.rs  deep.rs  enhanced.rs  entry_points.rs  hybrid.rs  mod.rs  reachability.rs  resources.rs
src/analysis/detectors/: assign_only.rs  dead_branch.rs  ignored_return.rs  mod.rs  redundant_override.rs  redundant_public.rs  sealed_variant.rs  unused_class.rs  unused_enum_case.rs  unused_import.rs  unused_intent_extra.rs  unused_method.rs  unused_param.rs  unused_property.rs  write_only.rs
src/baseline/: mod.rs
src/cache/: mod.rs
src/config/: loader.rs  mod.rs
src/coverage/: jacoco.rs  kover.rs  lcov.rs  mod.rs
src/discovery/: file_finder.rs  mod.rs
src/graph/: builder.rs  declaration.rs  mod.rs  parallel_builder.rs  reference.rs
src/parser/: common.rs  java.rs  kotlin.rs  mod.rs
src/parser/xml/: layout.rs  manifest.rs  menu.rs  mod.rs  navigation.rs
src/proguard/: mod.rs  report_generator.rs  usage.rs
src/refactor/: editor.rs  mod.rs  safe_delete.rs  undo.rs
src/report/: json.rs  mod.rs  sarif.rs  terminal.rs
src/watch/: mod.rs
tests/fixtures/android/: MainActivity.kt
tests/fixtures/java/: DeadCode.java
tests/fixtures/kotlin/: all_used.kt  cross_file_a.kt  cross_file_b.kt  dead_code.kt  edge_cases.kt  false_positives.kt  redundant_overrides.kt  sealed_classes.kt  unreferenced.kt  unused_params.kt  write_only.kt
tests/integration/: advanced_tests.rs  analysis_test.rs  cli_tests.rs  comprehensive_tests.rs  detector_tests.rs  false_positive_tests.rs
